dataset1235/2025-2/805158916/users/4060012531/executions/2118643220_3836350213.log
== RUN (2025-09-01 14:17:39)
-- CODE: 
peso=float(input())
qtdp=float(input())

sobra=peso%qtdp
num_pqn=peso//qtdp
total=sobra*7
print(num_pqn))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
File "XXXX", line 7
    print(num_pqn))
                  ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:15:21)
-- CODE: 
peso=float(input())
qtdp=float(input())

sobra=peso%qtdp
total=sobra*7
print(total(sobra,3))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total(sobra,3))
          ^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:14:29)
-- CODE: 
peso=float(input())
qtdp=float(input())
resto=peso

sobra=peso%qtdp

print(round(sobra,3))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
11.36
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
14.943
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
5.43
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
5.61
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
2.94
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
16.663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:23:06)
-- CODE: 
peso=float(input())
qtdp=float(input())
totgpq=qtdp*7
sobra=peso-totgpq
print(round(sobra,3))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1798.4
26.28
---- correct output:
1614.44
---- user output:
1614.44
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
-- TEST CASE 3:
---- input:
2987.43
14.00
---- correct output:
2889.43
---- user output:
2889.43
-- TEST CASE 4:
---- input:
2884.21
7.40
---- correct output:
2832.41
---- user output:
2832.41
-- TEST CASE 5:
---- input:
2452.8
21.49
---- correct output:
2302.37
---- user output:
2302.37
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.563
---- user output:
7859.563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
